--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "server": "set DEBUG=app:* && nodemon src/app.js",
+    "server-ps": "@powershell -Command $env:DEBUG='app:*'; nodemon src/app.js",
     "server-pm2": "DEBUG=app:* pm2 start src/app.js --name video-backend"
   },
   "dependencies": {
